CS_PROD_20150209_01/Metadata/unpackaged/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <description>Created by LM on 9/18/2013 for Phase 2 rollout; request from Pat</description>
        <label>Ad Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Bing/Yahoo/Adcenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M6/ Dstilery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retargeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Campaign_ID__c</fullName>
        <description>Created by LM on 1/31/14 for Phase2</description>
        <label>CRM Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout; revised by Pat on 9/18/2013</description>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Leads (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Building (2)/Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership (3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell Up Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Number__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <displayFormat>{000000}</displayFormat>
        <label>Campaign Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Divsion__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Divsion</label>
        <picklist>
            <picklistValues>
                <fullName>Cision US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout; changed for Pat on 9/18/2013</description>
        <label>Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Pricing Info Demo (PID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial/Free Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Paper/Tip Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briefing Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitching Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Created by LM on 9/18/2013 for Phase 2 rollout per Pat&apos;s request</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Cals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Queue__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Team Queue</label>
        <picklist>
            <picklistValues>
                <fullName>New Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Page_URL__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Web Page URL</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Goal__c</columns>
        <columns>Team_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Campaign_Goal__c</columns>
        <columns>Ad_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Team_Queue__c</columns>
        <columns>Web_Page_URL__c</columns>
        <columns>CRM_Campaign_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Nurture_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Nurture</value>
        </filters>
        <label>Nurture Campaigns</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>